rust/examples/variables/cannot-change-type/out.out
error[E0308]: mismatched types
 --> examples/variables/cannot_change_type.rs:5:14
  |
2 |     let mut answer = "What is the answer";
  |                      -------------------- expected due to this value
...
5 |     answer = 42;
  |              ^^ expected `&str`, found integer

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
